# FilingDelta

./: .env.example  .gitignore  README.md  pyproject.toml  start_backend.cmd  start_backend.sh  start_demo.cmd  start_demo.command  start_demo.sh  start_frontend.cmd  start_frontend.sh
docs/: dayu_agent_technical_report.md  golden_queries_v2_design.md  retrieval_eval_plan.md  section_text_eval_plan.md  typed_evidence_refactor_blueprint.md
frontend/: index.html  package-lock.json  package.json
scripts/: backfill_financial_facts_from_raw.py  build_financial_fact_store.py  build_golden_queries_v2_anchor_confirmation.py  build_golden_queries_v2_candidate_matrix.py  build_golden_queries_v2_industry_matrix.py  build_golden_queries_v2_smoke_manifest.py  build_golden_queries_v2_universal6_anchor.py  build_raw_document_registry.py  query_financial_facts.py  run_chat_latency_smoke.py  run_chat_quality_smoke.py  run_chat_router_bakeoff.py  run_parser_smoke_check.py  run_retrieval_eval.py  run_section_text_audit.py  run_single_filing.py  run_single_filing_workflow.py  run_smoke_v2_eval.py  run_smoke_v2_failure_probe.py  run_smoke_v2_hybrid_strategy_alignment.py  run_smoke_v2_no_table_row_strategy.py  run_smoke_v2_page_text_hybrid_grid.py  run_smoke_v2_page_text_hybrid_guard.py  run_smoke_v2_retrieval_diagnosis.py  run_table_row_retrieval_eval.py  search_golden_queries_v2_evidence.py
tests/: test_answerer_context.py  test_chat_qa_memory.py  test_chat_qa_retrieval.py  test_chat_quality_eval.py  test_chat_router_direct.py  test_chat_router_prompt.py  test_demo_chat_stream.py  (+17 more)
(+107 files in other folders)
