[project]
name = "filingdelta"
version = "0.1.0"
description = "Traceable disclosure reading and diff analysis for A-share, H-share, and ADR filings."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "llama-cloud>=2.1.0",
    "llama-index-core>=0.12.0",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-llms-openai>=0.3.0",
    "llama-index-utils-workflow>=0.3.0",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "pydantic-settings>=2.7.0",
    "pymupdf>=1.25.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "qdrant-client>=1.12.0",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
